tests/error/ptr_static_outside2.gw
// [contains] 'static' can only be used at class scope
static typedef void (Test)(int i);
